MEC-61-Fix Support section horizontal position on mobile RWD

--- a/client/src/components/sections/SupportSection/SupportSection.module.scss
+++ b/client/src/components/sections/SupportSection/SupportSection.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
+  // outline: 1px solid blue;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding-top: 5rem;
   gap: 5rem;
 
@@ -17,6 +18,7 @@
 }
 
 .itemWrapper {
+  // outline: 1px solid red;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -51,7 +53,7 @@
 
   @media (max-width: 550px) {
     h2 {
-      font-size: calc(var(--font-size-h2) - 12px);
+      font-size: calc(var(--font-size-h2) - 13px);
     }
 
     p {
