--- a/client/src/components/templates/home/Home.module.scss
+++ b/client/src/components/templates/home/Home.module.scss
@@ -7,6 +7,6 @@
   padding: 4rem 5% 5rem 5%;
 
   @media (max-width: 800px) {
-    padding: 2rem 5% 5rem 5%;
+    padding: 2rem 5% 2rem 5%;
   }
 }
